# origin_django

./: .gitignore  pyproject.toml
.codex/environments/: environment.toml
accounts/: admin.py  authentication.py  models.py  permissions.py  schemas.py  services.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: __init__.py  test_api.py  test_placeholder.py
common/: __init__.py  cache_utils.py  env.py  exceptions.py  responses.py  views.py
config/: settings.py  urls.py
docs/: api.md  db.md  plan.md
inventory/: admin.py  expiry.py  models.py  schemas.py  services.py  urls.py  views.py
inventory/management/commands/: backfill_batch_qr_credentials.py  backfill_inventory_actors.py
inventory/migrations/: 0001_actor_audit.py  0002_performance_indexes.py
inventory/tests/: __init__.py  test_api.py  test_config.py  test_services.py
templates/: index.html
